<!--
  ~ Created by Android Team MIS-SEG Year 2021
  ~ Copyright (c) 2021. Guanzon Central Office
  ~ Guanzon Bldg., Perez Blvd., Dagupan City, Pangasinan 2400
  ~ Project name : GhostRider_Android
  ~ Module : GhostRider_Android.dailyCollectionPlan
  ~ Electronic Personnel Access Control Security System
  ~ project file created : 4/24/21 3:19 PM
  ~ project file last modified : 4/24/21 3:18 PM
  -->

<resources>
    <string name="sHintLastname">LastName</string>
    <string name="sHintFirstName">FirstName</string>
    <string name="sHintSuffix">Suffix</string>
    <string name="sHintMiddName">MiddleName</string>
    <string name="sHintNickname">NickName</string>
    <string name="sHintBirthDate">Birth Date (MM/DD/YYYY)</string>
    <string name="sHintBpProv">Province (Birth Place)</string>
    <string name="sGenderMale">Male</string>
    <string name="sGenderFmale">Female</string>
    <string name="sGenderLGBT">LGBT</string>
    <string name="sLblGender">Gender</string>
    <string name="sHintBpTown">Town (Birth Place)</string>
    <string name="sHintCitizenship">Citizenship (Required)</string>
    <string name="sHintMotherNm">Mother\'s Maiden Name (Required)</string>
    <string name="sHintPrimaryContact">Primary Contact No. (Required)</string>
    <string name="sHint2ndContact">2nd Contact No. (Optional)</string>
    <string name="sHint3rdContact">3rd Contact No. (Optional)</string>
    <string name="sHintTelephoneNo">Telephone No.</string>
    <string name="sHintEmailAdd">Email Address</string>
    <string name="sHintRemarks">Remarks</string>
    <string name="sHintFbAccount">Facebook Account</string>
    <string name="sHintViberAcc">Viber Account</string>
    <string name="sLabelCivilStatus">Civil Status</string>
    <string name="sbtnNext">Next</string>
    <string name="sLabelPresAddress">Present Address</string>
    <string name="sHintLandmark">Landmark</string>
    <string name="sHintHouseNo">House No.</string>
    <string name="sHintLotNo">Phase#/Lot#/Sitio</string>
    <string name="sHintStreet">Street</string>
    <string name="sHintProvince">Province</string>
    <string name="sHintTown">Municipality</string>
    <string name="sHintBarangay">Barangay</string>
    <string name="sLabelHouseOwnership">House Ownership</string>
    <string name="sLabelOwned">Owned</string>
    <string name="sLabelRent">Rent</string>
    <string name="sLabelCaretaker">Care Taker</string>
    <string name="sLabelPermAddress">Permanent Address</string>
    <string name="sHintCompanyNme">Company Name</string>
    <string name="sHintAddress">Street/ Building/ Barangay</string>
    <string name="sHintPosition">Specific Job/Position</string>
    <string name="sHintJobTitle">Job Title</string>
    <string name="sHintLenghtService">Lenght Of Service</string>
    <string name="sHintMonthlyIncome">Monthly Income (Required)</string>
    <string name="sHintCompanyContact">Company Contact (Required)</string>
    <string name="sHintCountryNm">Country Name</string>
    <string name="sLabelYes">Yes</string>
    <string name="sLabelNo">No</string>
    <!--    <string name="sHeaderLabelSector">Employment Sector</string>-->
    <string name="sHeaderLabelSector">Is dependent employed?</string>
    <string name="sHeaderLabelEmploymentTypeSector">Employment Type</string>
    <string name="sHeaderLabelSpouseEmploymentTypeSector">Spouse Employment Type</string>
    <string name="sLabelUniformPersonnel">Is applicant uniform personnel?</string>
    <string name="sLabelMilitaryPersonnel">Is applicant military personnel?</string>
    <string name="sLabelPrivate">Private</string>
    <string name="sLabelGovernment">Government</string>
    <string name="sLabelArClient">AR Client</string>
    <string name="sLabelInsuranceClient">Insurance Client</string>
    <string name="sLblCheckPayment">Check Payment</string>
    <string name="sLabelOFW">OFW</string>
    <string name="sHintMonthlyExp">Monthly Expense (Required)</string>
    <string name="sHintBusinessNm">Business Name</string>
    <string name="sHintMobileNo">Mobile No. (Required)</string>
    <string name="sHintFinanceNm">Name of Financier</string>
    <string name="sHintRangeIncm">Range of Income</string>
    <string name="sHintRetireYear">Retirement Year</string>
    <string name="sHintNatureIncm">Nature of Income</string>
    <string name="sLabelOtherSrcIncm">Other Source of Income</string>
    <string name="sLabelCreditCard">Credit Card Account</string>
    <string name="sHintElectric">Electricity</string>
    <string name="sHintFood">Food</string>
    <string name="sHintWater">Water</string>
    <string name="sHintLoan">Loan</string>
    <string name="sHintAmountLmt">Amount Limit</string>
    <string name="sHintUseLenght">Length of Use</string>
    <string name="sBtnAddDependent">Add Dependent</string>
    <string name="sHintDependentFNme">Dependent Full Name</string>
    <string name="sHintAge">Age</string>
    <string name="sHintSchoolNm">Is dependent a student?</string>
    <string name="sDependentStudent">School Name</string>
    <string name="sLabelQUnitUser">Who will use the unit?</string>
    <string name="sLabelQUnitPurpose">Purpose of buying the unit.</string>
    <string name="sLabelQMonthlyAmort">Who will shoulder the monthly payment?</string>
    <string name="sLabelQDiscoverUs">How you know about us?</string>
    <string name="sHintSpecify">Please specify</string>
    <string name="sbtnAddReference">Add Reference</string>
    <string name="sLabelGarage">With safe garage</string>
    <string name="sHintLengthStay">Length of Stay (Required)</string>
    <string name="sHintRelationship">Relationship</string>
    <string name="sHintDependentRelationship">Dependent Relationship</string>
    <string name="sSchoolType">School Type</string>
    <string name="sSchoolLvl">Education Level</string>
    <string name="sHintCollectTp">Collection Type</string>
    <string name="sHintYear">Year</string>
    <string name="sHintNewApplication">Create New Application</string>
    <string name="sbtnPrvs">Previous</string>
    <string name="sHintCivilStatus">Civil Status</string>


    <string name="header_creditApp_coMakerInfo">CO MAKER\'S INFORMATION</string>
    <string name="header_creditApp_birthPlace">BIRTH PLACE</string>
    <string name="header_creditApp_birthdayInfo">BIRTHDATE</string>
    <string name="header_creditApp_contact">CONTACT</string>
    <string name="hint_creditApp_maidenName">Applicant\'s Maiden Name</string>

    <string name="sDCP_CNA_RG_Contact">Contact Number</string>
    <string name="sDCP_CNA_RG_Address">Address</string>
    <string name="btn_add">Add</string>
    <string name="btn_commit">Commit</string>
    <string name="btn_submit">Submit</string>

    <string name="sHouseNox">House No.</string>
    <string name="sAddress">Street/Sitio/Lot No.</string>
    <string name="sTown">Municipality</string>
    <string name="sBrgy">Barangay</string>
    <string name="sLblRemarks">Remarks</string>
    <string name="sLblNoTransactionLogInDate">No transaction log on this date.</string>
    <string name="sLblNoTransactionLogInName">Customer name does not exist in the list.</string>
    <string name="sActionMenu_TransactionList">Transaction List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="sActionMenu_ARClient">Get AR Client Info</string>
    <string name="sActionMenu_AddCollection">Add Collection</string>
    <string name="sActionMenu_InsuranceClient">Get Insurance Client info</string>
    <string name="sActionMenu_postCollection">Post Collection</string>
    <string name="sActionMenu_imageLog">Image Log</string>
    <string name="sActionMenu_exportFile">Export Collection File</string>
    <string name="sActionMenu_uploadFile">Import Collection File</string>
    <string name="sActionMenu_remitCollection">Remit Collection</string>
    <string name="sActionMenu_clearDCP">Clear DCP Records</string>
    <string name="lsHintImportFile">How to import DCP collection list?</string>
    <string name="sTitle_DCP">Daily Collection Plan</string>
    <string name="sTitle_DCPImageLog">DCP Image Log</string>
    <string name="sLabel_NoDCP">No collection list available. \n Please select an option to retrieve the data.</string>
    <string name="sLabel_PostedDCP">Collection list for today was already posted.</string>
    <string name="sContent_NoDCP">Empty_DCP</string>
    <string name="sHint_SearchDCp">Search Customer\'s name</string>
    <string name="sBtn_Download">Download</string>
    <string name="sBtn_PostCollection">Post Collection</string>

</resources>